# cloud-migrate-estimator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: aws_baselines.toml  rate_card.toml  settings.toml
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  PROBLEM.md  REQUIREMENTS.md
prompts/: architect.md  estimate.md  extract.md  gaps.md
src/estimator/: __init__.py  cli.py  config.py  llm.py  models.py  pipeline.py  report.py
src/estimator/stages/: architect.py  estimate.py  extract.py  gaps.py
templates/: report.md.j2
tests/: conftest.py  test_cli.py  test_config.py  test_llm.py  test_models.py  test_pipeline.py  test_report.py  test_stages.py
tests/fixtures/: sample_transcript.txt
